<?xml version="1.0"?>
<package format="2">
  <name>javad_delta</name>
  <version>0.1.0</version>
  <description>JAVAD DELTA Driver</description>

  <maintainer email="mizuno.naoki@rm.is.tohoku.ac.jp">Naoki Mizuno</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/tado-aev/javad_delta</url>

  <author>Naoki Mizuno</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>python-gdal</exec_depend>
</package>
